--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -14,4 +14,5 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '^1.16.4'
+      - name: generate cpe sqlite
         run: go mod download && go run cmd/generate.go
