--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           go-version: '^1.16.4'
       - name: generate cpe sqlite
-        run: go mod download && go run cmd/generate.go
+        run: go mod download && go run cmd/nvd/generate.go
