--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -15,4 +15,9 @@ jobs:
         with:
           go-version: '^1.16.4'
       - name: generate cpe sqlite
-        run: go mod download && go run cmd/nvd/generate.go
+        run: go mod download && go run -tags full,fts5 cmd/nvd/generate.go
+      - name: release
+        if: hashFiles('*.sqlite') != ''
+        uses: softprops/action-gh-release@v1
+        with:
+          files: "*.sqlite"
