Get etag name from file

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -17,7 +17,7 @@ jobs:
       - name: generate cpe sqlite
         run: go mod download && go run -tags full,fts5 cmd/nvd/generate.go
       - name: Set env
-        run: echo "ETAG=$(basename -- "*.sqlite")" >> $GITHUB_ENV
+        run: cat ./etagenv >> $GITHUB_ENV
       - name: Tag
         run: git tag ${{ env.ETAG }}
       - name: release
