--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           go-version: '^1.16.4'
       - name: generate cpe sqlite
-        run: go mod download && go run -tags full,fts5 cmd/nvd/generate_cpe.go
+        run: go mod download && go run -tags full,fts5 cmd/cpe/generate.go
       - name: Set env
         if: hashFiles('*.sqlite.gz') != ''
         run: cat ./etagenv >> $GITHUB_ENV
