--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,4 +1,7 @@
-on: push
+on:
+  - push
+  schedule:
+      - cron: "0 0 * * *"
 jobs:
   cpe:
     runs-on: ubuntu-latest
@@ -8,7 +11,7 @@ jobs:
         with:
           repository: fleetdm/fleet
           fetch-depth: 1
-          ref: issue-1435-software-to-cpe
+          ref: main
           token: ${{ github.token }}
       - name: run generate
         uses: actions/setup-go@v2
