--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -12,29 +12,43 @@ jobs:
   cpe:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout fleet
+      - name: Checkout NVD repo
+        uses: actions/checkout@v2
+        with:
+          ref: release
+
+      - name: Checkout Fleet
         uses: actions/checkout@v2
         with:
           repository: fleetdm/fleet
           fetch-depth: 1
           ref: main
           token: ${{ github.token }}
-      - name: run generate
+          path: fleet
+
+      - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: '^1.16.4'
-      - name: generate cpe sqlite
-        run: go mod download && go run -tags full,fts5 cmd/cpe/generate.go
-      - name: Set env
-        if: hashFiles('*.sqlite.gz') != ''
-        run: cat ./etagenv >> $GITHUB_ENV
+          go-version: '^1.17.3'
+          
+      - name: Generate CPE database
+        run: cd fleet && go mod download && go run -tags fts5 cmd/cpe/generate.go && cat ./etagenv >> $GITHUB_ENV
+        
+      # Note that a new commit must be made for each release, otherwise GitHub does not order
+      # the releases properly.
       - name: Tag
-        if: hashFiles('*.sqlite.gz') != ''
-        run: git tag ${{ env.ETAG }}
-      - name: release
-        if: hashFiles('*.sqlite.gz') != ''
-        uses: softprops/action-gh-release@v1
+        if: hashFiles('fleet/*.sqlite.gz') != ''
+        run: |
+          git config --global user.email ""
+          git config --global user.name "GitHub Actions Bot"
+          git commit --allow-empty -m 'Release ${{ env.ETAG }}'
+          git push origin release
+          git tag ${{ env.ETAG }}
+        
+      - name: Release
+        if: hashFiles('fleet/*.sqlite.gz') != ''
+        uses: softprops/action-gh-release@1e07f4398721186383de40550babbdf2b84acfc5 # v0.1.14
         with:
-          files: "*.sqlite.gz"
+          files: "fleet/*.sqlite.gz"
           tag_name: ${{ env.ETAG }}
           token: ${{ secrets.GITHUB_TOKEN }}
