--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,10 +1,4 @@
-on:
-  push:
-    branches:
-      - master
-  schedule:
-      - cron: "0 0 * * *"
-  workflow_dispatch: # Manual
+on: push
 
 permissions:
   contents: write
@@ -31,25 +25,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '^1.17.3'
-          
+
       - name: Generate CPE database
-        run: cd fleet && go mod download && go run -tags fts5 cmd/cpe/generate.go && cat ./etagenv >> $GITHUB_ENV
-        
-      # Note that a new commit must be made for each release, otherwise GitHub does not order
-      # the releases properly.
-      - name: Tag
-        if: hashFiles('fleet/*.sqlite.gz') != ''
         run: |
-          git config --global user.email ""
-          git config --global user.name "GitHub Actions Bot"
-          git commit --allow-empty -m 'Release ${{ env.ETAG }}'
-          git push origin release
-          git tag ${{ env.ETAG }}
-        
-      - name: Release
-        if: hashFiles('fleet/*.sqlite.gz') != ''
-        uses: softprops/action-gh-release@1e07f4398721186383de40550babbdf2b84acfc5 # v0.1.14
-        with:
-          files: "fleet/*.sqlite.gz"
-          tag_name: ${{ env.ETAG }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          cd fleet
+          go mod download
+          go run -tags fts5 cmd/cpe/generate.go
+          cat ./etagenv >> $GITHUB_ENV
