--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -53,3 +53,24 @@ jobs:
           files: "fleet/*.sqlite.gz"
           tag_name: ${{ env.ETAG }}
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Slack Notification
+        # if: failure() # will uncomment once tested.
+        uses: slackapi/slack-github-action@v1.18.0
+        with:
+          payload: |
+            {
+              "text": "${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head.html_url }}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "NVD db generation result: ${{ job.status }}\nhttps://github.com/fleetdm/nvd/actions/runs/${{  github.run_id }}\n${{ github.event.pull_request.html_url || github.event.head.html_url }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_CORE_ENGINEERING_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
