add cpe translations to release
clean up workflow

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - master
   schedule:
-      - cron: "0 0 * * *"
+    - cron: "0 0 * * *"
   workflow_dispatch: # Manual
 
 permissions:
@@ -33,12 +33,15 @@ jobs:
           go-version: '^1.17.3'
 
       - name: Generate CPE database
-        run: cd fleet && go mod download && go run -tags fts5 cmd/cpe/generate.go && cat ./etagenv >> $GITHUB_ENV
+        run: |
+          cd fleet
+          go mod download
+          go run -tags fts5 cmd/cpe/generate.go
+          cat ./etagenv >> $GITHUB_ENV
 
       # Note that a new commit must be made for each release, otherwise GitHub does not order
       # the releases properly.
       - name: Tag
-        if: hashFiles('fleet/*.sqlite.gz') != ''
         run: |
           git config --global user.email ""
           git config --global user.name "GitHub Actions Bot"
@@ -46,10 +49,11 @@ jobs:
           git push origin release
 
       - name: Release
-        if: hashFiles('fleet/*.sqlite.gz') != ''
         uses: softprops/action-gh-release@1e07f4398721186383de40550babbdf2b84acfc5 # v0.1.14
         with:
-          files: "fleet/*.sqlite.gz"
+          files: |
+            fleet/*.sqlite.gz
+            fleet/server/vulnerabilities/cpe_translations.json
           tag_name: ${{ env.ETAG }}
           target_commitish: release
           token: ${{ secrets.GITHUB_TOKEN }}
