Revert "do not commit"
This reverts commit 2004aaa4e9c000aaffd8e9c00ec15e79018b132f.

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           repository: fleetdm/fleet
           fetch-depth: 1
-          ref: michal-6628-macos-vuln
+          ref: main
           token: ${{ github.token }}
           path: fleet
 
