--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -10,7 +10,7 @@ permissions:
   contents: write
 
 jobs:
-  cpe:
+  security_artifacts:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout NVD repo
@@ -32,11 +32,12 @@ jobs:
         with:
           go-version: '^1.17.3'
 
-      - name: Generate CPE database
+      - name: Generate security artifacts
         run: |
           cd fleet
           go mod download
           go run -tags fts5 cmd/cpe/generate.go
+          go run -tags fts5 cmd/msrc/generate.go
 
       - name: Current date
         id: date
@@ -58,6 +59,7 @@ jobs:
           files: |
             fleet/*.sqlite.gz
             fleet/server/vulnerabilities/cpe_translations.json
+            fleet/fleet_msrc_*.json
           tag_name: ${{ steps.date.outputs.date }}
           target_commitish: release
           token: ${{ secrets.GITHUB_TOKEN }}
