--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -32,14 +32,18 @@ jobs:
         with:
           go-version: '^1.17.3'
 
-      - name: Generate security artifacts
-        run: |
-          cd fleet
-          go mod download
-          export NETWORK_TEST_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          go run -tags fts5 cmd/cpe/generate.go
-          go run -tags fts5 cmd/msrc/generate.go
-          go run -tags fts5 cmd/macoffice/generate.go
+      - uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 15
+          max_attempts: 3
+          retry_wait_seconds: 120
+          command: |
+            cd fleet
+            go mod download
+            export NETWORK_TEST_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+            go run -tags fts5 cmd/cpe/generate.go
+            go run -tags fts5 cmd/msrc/generate.go
+            go run -tags fts5 cmd/macoffice/generate.go
 
       - name: Current date
         id: date
