--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -32,7 +32,8 @@ jobs:
         with:
           go-version: '^1.17.3'
 
-      - uses: nick-fields/retry@v2
+      - name: Generate security artifacts
+        uses: nick-fields/retry@943e742917ac94714d2f408a0e8320f2d1fcafcd # v2.8.3
         with:
           timeout_minutes: 15
           max_attempts: 3
