--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch: # Manual
     inputs:
       clean:
-        description: 'Clean: download all feeds from MSRC from scratch.'
+        description: "Clean: download all feeds from MSRC from scratch."
         required: true
         type: boolean
         default: false
@@ -22,6 +22,11 @@ jobs:
   security_artifacts:
     runs-on: ubuntu-latest
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@20cf305ff2072d973412fa9b1e3a4f227bda3c76 # v2.14.0
+        with:
+          egress-policy: audit
+
       - name: Checkout NVD repo
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
         with:
@@ -39,7 +44,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
         with:
-          go-version-file: 'fleet/go.mod'
+          go-version-file: "fleet/go.mod"
 
       - name: Generate security artifacts
         run: |
